Laneline project update
Update detect_lanes.
Apply gaussian filter-> Perform canny edge detection->Mask the image with fillPoly->Perform hough transform and get line segments->Put lines onto original image

--- a/Term1/LaneLines/P1.ipynb
+++ b/Term1/LaneLines/P1.ipynb
@@ -329,7 +329,45 @@
     "    if connected:\n",
     "        return detect_connected_lanes(image, **kwargs)\n",
     "    else:\n",
-    "        return detect_lanes(image, **kwargs)\n"
+    "        return detect_lanes(image, **kwargs)\n",
+    "\n",
+    "def detect_lanes(image, blur_kernel_size=5, canny_low=70, canny_high=200, hough_rho=2, hough_theta=1,\n",
+    "                 hough_threshold=20, hough_min_line_len=2, hough_max_line_gap=2):\n",
+    "    # 1.) Get image shape\n",
+    "    imshape = image.shape\n",
+    "    \n",
+    "    # 2.) Apply gaussian filter\n",
+    "    kernel_size = blur_kernel_size\n",
+    "    blur = gaussian_blur(image, kernel_size=kernel_size)\n",
+    "        \n",
+    "    # 3.) Perform canny edge detection \n",
+    "    low_threshold = canny_low\n",
+    "    high_threshold = canny_high\n",
+    "    # Uncomment for Otsus Method / only use with gray scale image\n",
+    "    #high_threshold, _ = cv2.threshold(blur_gray, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)\n",
+    "    #low_threshold = 0.5 * high_threshold\n",
+    "    edges = canny(blur, low_threshold, high_threshold)\n",
+    "      \n",
+    "    # 4.) Mask the image with fillPoly\n",
+    "    vertices = np.array([[(110,imshape[0]),(imshape[1]/2-25, imshape[0]/2+50),\n",
+    "                          (imshape[1]/2+25, imshape[0]/2+50), (imshape[1]-20,imshape[0])]], dtype=np.int32)\n",
+    "    masked_edges = region_of_interest(edges, vertices=vertices)\n",
+    "    \n",
+    "    # 5.) Perform hough transform and get line segments\n",
+    "    rho = hough_rho # distance resolution in pixels of the Hough grid\n",
+    "    theta = hough_theta * np.pi/180 # angular resolution in radians of the Hough grid\n",
+    "    threshold = hough_threshold     # minimum number of votes (intersections in Hough grid cell)\n",
+    "    min_line_len = hough_min_line_len #minimum number of pixels making up a line\n",
+    "    max_line_gap = hough_max_line_gap   # maximum gap in pixels between connectable line segments\n",
+    "    # Use OpenCvs HoughLinesP\n",
+    "    line_img, lines = hough_lines(masked_edges,rho, theta, threshold, min_line_len, max_line_gap)\n",
+    "    # Add poly\n",
+    "    #line_img = draw_vertices(line_img, vertices)\n",
+    "    \n",
+    "    # 6.) Put lines onto original image\n",
+    "    result_img = weighted_img(line_img, image, α=0.8)\n",
+    "    \n",
+    "    return result_img, lines"
    ]
   },
   {
