:tada: Solve the notebook

--- a/deep-learning/autoencoder/Convolutional_Autoencoder.ipynb
+++ b/deep-learning/autoencoder/Convolutional_Autoencoder.ipynb
@@ -105,51 +105,45 @@
    },
    "outputs": [],
    "source": [
-    "learning_rate = 0.001\n",
-    "# Input and target placeholders\n",
-    "inputs_ = \n",
-    "targets_ = \n",
+    "inputs_ = tf.placeholder(tf.float32, (None, 28, 28, 1), name='inputs')\n",
+    "targets_ = tf.placeholder(tf.float32, (None, 28, 28, 1), name='targets')\n",
     "\n",
     "### Encoder\n",
-    "conv1 = \n",
+    "conv1 = tf.layers.conv2d(inputs_, 16, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 28x28x16\n",
-    "maxpool1 = \n",
+    "maxpool1 = tf.layers.max_pooling2d(conv1, (2,2), (2,2), padding='same')\n",
     "# Now 14x14x16\n",
-    "conv2 = \n",
+    "conv2 = tf.layers.conv2d(maxpool1, 8, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 14x14x8\n",
-    "maxpool2 = \n",
+    "maxpool2 = tf.layers.max_pooling2d(conv2, (2,2), (2,2), padding='same')\n",
     "# Now 7x7x8\n",
-    "conv3 = \n",
+    "conv3 = tf.layers.conv2d(maxpool2, 8, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 7x7x8\n",
-    "encoded = \n",
+    "encoded = tf.layers.max_pooling2d(conv3, (2,2), (2,2), padding='same')\n",
     "# Now 4x4x8\n",
     "\n",
     "### Decoder\n",
-    "upsample1 = \n",
+    "upsample1 = tf.image.resize_nearest_neighbor(encoded, (7,7))\n",
     "# Now 7x7x8\n",
-    "conv4 = \n",
+    "conv4 = tf.layers.conv2d(upsample1, 8, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 7x7x8\n",
-    "upsample2 = \n",
+    "upsample2 = tf.image.resize_nearest_neighbor(conv4, (14,14))\n",
     "# Now 14x14x8\n",
-    "conv5 = \n",
+    "conv5 = tf.layers.conv2d(upsample2, 8, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 14x14x8\n",
-    "upsample3 = \n",
+    "upsample3 = tf.image.resize_nearest_neighbor(conv5, (28,28))\n",
     "# Now 28x28x8\n",
-    "conv6 = \n",
+    "conv6 = tf.layers.conv2d(upsample3, 16, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 28x28x16\n",
     "\n",
-    "logits = \n",
+    "logits = tf.layers.conv2d(conv6, 1, (3,3), padding='same', activation=None)\n",
     "#Now 28x28x1\n",
     "\n",
-    "# Pass logits through sigmoid to get reconstructed image\n",
-    "decoded =\n",
+    "decoded = tf.nn.sigmoid(logits, name='decoded')\n",
     "\n",
-    "# Pass logits through sigmoid and calculate the cross-entropy loss\n",
-    "loss = \n",
-    "\n",
-    "# Get cost and define the optimizer\n",
+    "loss = tf.nn.sigmoid_cross_entropy_with_logits(labels=targets_, logits=logits)\n",
     "cost = tf.reduce_mean(loss)\n",
-    "opt = tf.train.AdamOptimizer(learning_rate).minimize(cost)"
+    "opt = tf.train.AdamOptimizer(0.001).minimize(cost)"
    ]
   },
   {
@@ -158,7 +152,7 @@
    "source": [
     "## Training\n",
     "\n",
-    "As before, here we'll train the network. Instead of flattening the images though, we can pass them in as 28x28x1 arrays."
+    "As before, here wi'll train the network. Instead of flattening the images though, we can pass them in as 28x28x1 arrays."
    ]
   },
   {
@@ -261,50 +255,45 @@
    },
    "outputs": [],
    "source": [
-    "learning_rate = 0.001\n",
     "inputs_ = tf.placeholder(tf.float32, (None, 28, 28, 1), name='inputs')\n",
     "targets_ = tf.placeholder(tf.float32, (None, 28, 28, 1), name='targets')\n",
     "\n",
     "### Encoder\n",
-    "conv1 = \n",
+    "conv1 = tf.layers.conv2d(inputs_, 32, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 28x28x32\n",
-    "maxpool1 = \n",
+    "maxpool1 = tf.layers.max_pooling2d(conv1, (2,2), (2,2), padding='same')\n",
     "# Now 14x14x32\n",
-    "conv2 = \n",
+    "conv2 = tf.layers.conv2d(maxpool1, 32, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 14x14x32\n",
-    "maxpool2 = \n",
+    "maxpool2 = tf.layers.max_pooling2d(conv2, (2,2), (2,2), padding='same')\n",
     "# Now 7x7x32\n",
-    "conv3 = \n",
+    "conv3 = tf.layers.conv2d(maxpool2, 16, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 7x7x16\n",
-    "encoded = \n",
+    "encoded = tf.layers.max_pooling2d(conv3, (2,2), (2,2), padding='same')\n",
     "# Now 4x4x16\n",
     "\n",
     "### Decoder\n",
-    "upsample1 = \n",
+    "upsample1 = tf.image.resize_nearest_neighbor(encoded, (7,7))\n",
     "# Now 7x7x16\n",
-    "conv4 = \n",
+    "conv4 = tf.layers.conv2d(upsample1, 16, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 7x7x16\n",
-    "upsample2 = \n",
+    "upsample2 = tf.image.resize_nearest_neighbor(conv4, (14,14))\n",
     "# Now 14x14x16\n",
-    "conv5 = \n",
+    "conv5 = tf.layers.conv2d(upsample2, 32, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 14x14x32\n",
-    "upsample3 = \n",
+    "upsample3 = tf.image.resize_nearest_neighbor(conv5, (28,28))\n",
     "# Now 28x28x32\n",
-    "conv6 = \n",
+    "conv6 = tf.layers.conv2d(upsample3, 32, (3,3), padding='same', activation=tf.nn.relu)\n",
     "# Now 28x28x32\n",
     "\n",
-    "logits = \n",
+    "logits = tf.layers.conv2d(conv6, 1, (3,3), padding='same', activation=None)\n",
     "#Now 28x28x1\n",
     "\n",
-    "# Pass logits through sigmoid to get reconstructed image\n",
-    "decoded =\n",
+    "decoded = tf.nn.sigmoid(logits, name='decoded')\n",
     "\n",
-    "# Pass logits through sigmoid and calculate the cross-entropy loss\n",
-    "loss = \n",
-    "\n",
-    "# Get cost and define the optimizer\n",
+    "loss = tf.nn.sigmoid_cross_entropy_with_logits(labels=targets_, logits=logits)\n",
     "cost = tf.reduce_mean(loss)\n",
-    "opt = tf.train.AdamOptimizer(learning_rate).minimize(cost)"
+    "opt = tf.train.AdamOptimizer(0.001).minimize(cost)"
    ]
   },
   {
@@ -356,7 +345,7 @@
    "source": [
     "## Checking out the performance\n",
     "\n",
-    "Here I'm adding noise to the test images and passing them through the autoencoder. It does a suprisingly great job of removing the noise, even though it's sometimes difficult to tell what the original number is."
+    "Here I'm adding noise to the test images and passing them through the autoencoder. It does a suprising great job of removing the noise, even though it's sometimes difficult to tell what the original number is."
    ]
   },
   {
