--- a/deep-learning/autoencoder/Simple_Autoencoder.ipynb
+++ b/deep-learning/autoencoder/Simple_Autoencoder.ipynb
@@ -112,27 +112,24 @@
    "outputs": [],
    "source": [
     "# Size of the encoding layer (the hidden layer)\n",
-    "encoding_dim = 32 # feel free to change this value\n",
+    "encoding_dim = 32\n",
     "\n",
-    "# Input and target placeholders\n",
-    "inputs_ = \n",
-    "targets_ = \n",
+    "image_size = mnist.train.images.shape[1]\n",
     "\n",
-    "# Output of hidden layer, single fully connected layer here with ReLU activation\n",
-    "encoded = \n",
+    "inputs_ = tf.placeholder(tf.float32, (None, image_size), name='inputs')\n",
+    "targets_ = tf.placeholder(tf.float32, (None, image_size), name='targets')\n",
     "\n",
-    "# Output layer logits, fully connected layer with no activation\n",
-    "logits = \n",
-    "# Sigmoid output from logits\n",
-    "decoded = \n",
+    "# Output of hidden layer\n",
+    "encoded = tf.layers.dense(inputs_, encoding_dim, activation=tf.nn.relu)\n",
     "\n",
-    "# Sigmoid cross-entropy loss\n",
-    "loss = \n",
-    "# Mean of the loss\n",
-    "cost = \n",
+    "# Output layer logits\n",
+    "logits = tf.layers.dense(encoded, image_size, activation=None)\n",
+    "# Sigmoid output from\n",
+    "decoded = tf.nn.sigmoid(logits, name='output')\n",
     "\n",
-    "# Adam optimizer\n",
-    "opt = "
+    "loss = tf.nn.sigmoid_cross_entropy_with_logits(labels=targets_, logits=logits)\n",
+    "cost = tf.reduce_mean(loss)\n",
+    "opt = tf.train.AdamOptimizer(0.001).minimize(cost)"
    ]
   },
   {
@@ -158,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here I'll write a bit of code to train the network. I'm not too interested in validation here, so I'll just monitor the training loss. \n",
+    "Here I'll write a bit of code to train the network. I'm not too interested in validation here, so I'll just monitor the training loss and the test loss afterwards. \n",
     "\n",
     "Calling `mnist.train.next_batch(batch_size)` will return a tuple of `(images, labels)`. We're not concerned with the labels here, we just need the images. Otherwise this is pretty straightfoward training with TensorFlow. We initialize the variables with `sess.run(tf.global_variables_initializer())`. Then, run the optimizer and get the loss with `batch_cost, _ = sess.run([cost, opt], feed_dict=feed)`."
    ]
@@ -166,9 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "epochs = 20\n",
